--- a/index.html
+++ b/index.html
@@ -13,22 +13,34 @@
 </head>
 
 <body>
-    <h2>Welcome to</h2>
+    <section class="header-section">
+        <div class="header-area">
+            <h2>Welcome to</h2>
 
-    <h3>Hrithik Roshan Portpolio</h3>
+            <h3>Hrithik Roshan Portpolio</h3>
 
-    <h4>Hrithik Roshan is a vavourite hero all the persons</h4>
+            <h4>Hrithik Roshan is a vavourite hero all the persons</h4>
 
-    <p> <b>Hrithik Roshan:</b>Hrithik Roshan (born 10 January 1974), is an Indian actor who works in Hindi films.
-        He has portrayed a variety of characters and is known for his dancing skills. One of the highest-paid actors in
-        India, he has won many awards, including six Filmfares, four for Best Actor and one each for Best Debut and Best
-        Actor (Critics).Starting in 2012, he appeared several times in Forbes India's Celebrity 100 based on his income
-        andpopularity.
-    </p>
+            <p> <b>Hrithik Roshan:</b>Hrithik Roshan (born 10 January 1974), is an Indian actor who works in Hindi
+                films.
+                He has portrayed a variety of characters and is known for his dancing skills. One of the highest-paid
+                actors
+                in
+                India, he has won many awards, including six Filmfares, four for Best Actor and one each for Best Debut
+                and
+                Best
+                Actor (Critics).Starting in 2012.
+            </p>
 
-    <img src="images/my-bg2 (1).png" alt="hrithikroshan">
+            <a href="https://www.facebook.com/hrithikroshan">HIRE ME</a>
+        </div>
 
-    <a href="https://www.facebook.com/hrithikroshan">HIRE ME</a>
+        <div class="header-area">
+            <img src="images/my-bg2 (1).png" alt="hrithikroshan">
+        </div>
+
+    </section>
+
 
 
 
