image and css text added

--- a/index.html
+++ b/index.html
@@ -14,28 +14,31 @@
 
 <body>
     <section class="header-section">
-        <div class="header-area">
+
+
+
+        <div class="header-area01">
+
+            <img src="images/exp-bg.png" alt="exp-bg" />
+
             <h2>Welcome to</h2>
 
-            <h3>Hrithik Roshan Portpolio</h3>
+            <h3><span>Hrithik Roshan</span> Portpolio</h3>
 
-            <h4>Hrithik Roshan is a vavourite hero all the persons</h4>
+            <h4>Hrithik Roshan is a favourite hero all the persons</h4>
 
             <p> <b>Hrithik Roshan:</b>Hrithik Roshan (born 10 January 1974), is an Indian actor who works in Hindi
                 films.
                 He has portrayed a variety of characters and is known for his dancing skills. One of the highest-paid
                 actors
                 in
-                India, he has won many awards, including six Filmfares, four for Best Actor and one each for Best Debut
-                and
-                Best
-                Actor (Critics).Starting in 2012.
+                India, he has won many awards, including six Filmfares...
             </p>
 
             <a href="https://www.facebook.com/hrithikroshan">HIRE ME</a>
         </div>
 
-        <div class="header-area">
+        <div class="header-area02">
             <img src="images/my-bg2 (1).png" alt="hrithikroshan">
         </div>
 
