new image and text added

--- a/index.html
+++ b/index.html
@@ -50,15 +50,14 @@
         </div>
         <div class="middle-area02">
             <h1>UP COMMING MOVIE</h1>
-            <h4>Doctor strange</h4>
-            <p>The movie will tell the story of neurosurgeon Doctor Stephen Strange who discovers a secret world of
-                mysticism after a tragic car accident. He then learns how to utilise the vast array of metaphysical
-                abilities to save the world. Benedict will be going against Mads Mikkelsen who plays the lead
-                antagonist, Sam Raim.[Hrithik katrina and kongona ranot].</p>
-            <a href="https://www.youtube.com/watch?v=o1bPXreBz0U">DOWNLOAD TRAILER</a>
+            <h3>Doctor strange new bollywood movie story</h3>
 
             <img src="images/dream-bg.png" alt="dream-bg">
 
+            <p>The movie will tell the story of neurosurgeon Doctor Stephen Strange who discovers a secret world of
+                mysticism after a tragic car accident. He then learns how to utilise the vast array of metaphysical
+                abilities to save the world.</p>
+            <a href="https://www.youtube.com/watch?v=o1bPXreBz0U">DOWNLOAD TRAILER</a>
         </div>
     </section>
 
