zoom remove and text added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             <a href="https://www.youtube.com/watch?v=o1bPXreBz0U">DOWNLOAD TRAILER</a>
         </div>
     </section>
+    <section class="footer-section">
+        <h1>Experiences</h1>
+        <div>
+            <h2>Full stack web devloper</h2>
+        </div>
+    </section>
 
 
 
