images band text added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="header-area01">
 
-            <img src="images/exp-bg.png" alt="exp-bg" />
+            <img src="images/top-banner.png" alt="top-banner" />
 
             <h2>Welcome to</h2>
 
@@ -62,8 +62,22 @@
     </section>
     <section class="footer-section">
         <h1>Experiences</h1>
-        <div>
+        <div class="footer-area01">
+            <img src="images/exp-bg.png" alt="exp-bg">
             <h2>Full stack web devloper</h2>
+            <h6>2021-present I Am A Pro Level Developer</h6>
+            <p>I am the master of html,css and javascript.I know everything needed a website function,efficient.
+                I don't stop with the web.I went beyond with most popular javascript framework called vue JS.
+                I even know the deployment,server and security.I will give you 100% web solution.
+            </p>
+        </div>
+        <div class="footer-area02">
+            <h2>Baby Web developer</h2>
+            <h6>2020-2021|Programming Hero Learner</h6>
+            <p>They did'n offer me a job.But I made myself as a web developer.I made there
+                website and showed it to them.They liked it.And uploaded the content.It was
+                fun working at programing hero.
+            </p>
         </div>
     </section>
 
