--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
     <h1>Experiences</h1>
     <section class="footer-section">
 
-        <div class="footer-area01">
-
+        <div class="footer-area">
+            <img src="images/exp-bg.png" alt="exp-bg">
+        </div>
+        <div class="box">
             <h2>Full stack web devloper</h2>
             <h6>2021-present I Am A Pro Level Developer</h6>
             <p>I am the master of html,css and javascript.I know everything needed a website function,efficient.
@@ -73,7 +75,7 @@
                 I even know the deployment,server and security.I will give you 100% web solution.
             </p>
         </div>
-        <div class="footer-area02">
+        <div class="box2">
             <h2>Baby Web developer</h2>
             <h6>2020-2021|Programming Hero Learner</h6>
             <p>They did'n offer me a job.But I made myself as a web developer.I made there
