box color and entity added

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                 fun working at programing hero.
             </p>
         </div>
+
+    </section>
+    <section class="entity">
+        <p>&copy; Hrithik Roshan 2022,Best production.</p>
     </section>
 
 
